:sparkles: 新功能   - 初步搜索功能：请求本地静态资源   - 分页展示搜索结果   - “回到顶部”按钮

--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -377,3 +377,16 @@ template {
 [hidden] {
   display: none;
 }
+
+/**
+ * Reset ul, ol, li style
+ */
+
+li {
+  display: block
+}
+
+ul,
+ol {
+  list-style-type: none;
+}
