--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -4,8 +4,11 @@
 /* --xxx：定义变量 */
 :root {
   --color-text: #666;
-  --color-high-text: #ff5777;
-  --color-tint: #ff8198;
+  /* --color-high-text: #ff5777; */
+  /* #FF9966  #0066CC */
+  /* #336699  #99CCCC */
+  --color-high-text: #CCFF66;
+  --color-tint: #003366;
   --color-background: #fff;
   --font-size: 14px;
   --line-height: 1.5;
@@ -21,9 +24,10 @@
 
 body {
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  font-size: 16px;
   /* user-select: none; */
   /* 禁止用户鼠标在页面上选中文字/图片等 */
-  -webkit-tap-highlight-color: transparent;
+  /* -webkit-tap-highlight-color: transparent; */
   /* webkit是苹果浏览器引擎，tap点击，highlight背景高亮，color颜色，颜色用数值调节 */
   background: var(--color-background);
   color: var(--color-text);
@@ -32,7 +36,7 @@ body {
 }
 
 a {
-  color: var(--color-text);
+  color: var(--color-tint);
   text-decoration: none;
 }
 
